--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
         justify-content: center;
         align-items: center;
         overflow: hidden;
+        font-weight: 700;
       }
       button {
         display: block;
@@ -32,7 +33,6 @@
         background: white;
         text-transform: uppercase;
         font-size: 16px;
-        font-weight: 700;
         letter-spacing: 2px;
       }
       button:disabled {
@@ -62,6 +62,7 @@
         color: black;
         top: -70px;
         right: 0;
+        font-weight: normal;
       }
       .bomb.owner {
         transform: translate(-50%, -50%);
@@ -74,6 +75,7 @@
         top: -105px;
         right: -80px;
         font-size: 300px;
+        font-weight: normal;
       }
       .throw-counter {
         position: absolute;
@@ -81,8 +83,6 @@
         bottom: 70px;
         left: 70px;
         border-radius: 50%;
-
-        font-weight: 700;
         color: white;
         width: 30px;
         height: 30px;
@@ -108,7 +108,6 @@
         justify-content: center;
         align-items: center;
         font-size: 30px;
-        font-weight: 700;
         font-style: italic;
       }
       #message.started {
@@ -120,7 +119,6 @@
         left: 50%;
         transform: translate(-50%, -50%);
         font-style: italic;
-        font-weight: 700;
       }
       #score h2 {
         margin: 20px 0 5px 0;
@@ -135,7 +133,6 @@
     <div id="countdownLocal" class="throw-counter"></div>
     <div id="score"></div>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/shared.js"></script>
     <script src="/client.js"></script>
   </body>
 </html>
