--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
-      html,
-      body {
+      body,
+      html {
         margin: 0;
         padding: 0;
-        background-color: paleturquoise;
+        background-color: #afeeee;
         font-family: sans-serif;
         width: 100%;
         height: 100%;
@@ -29,8 +29,8 @@
         right: 0;
         margin: auto;
         padding: 20px;
-        border: 5px solid black;
-        background: white;
+        border: 5px solid #000;
+        background: #fff;
         text-transform: uppercase;
         font-size: 16px;
         letter-spacing: 2px;
@@ -51,18 +51,18 @@
         justify-content: center;
         align-items: center;
         font-size: 50px;
-        color: white;
-        transition: transform 300ms;
+        color: #fff;
+        transition: transform 0.3s;
       }
       .bomb:after {
         content: "💣";
         position: absolute;
         z-index: -1;
         font-size: 200px;
-        color: black;
+        color: #000;
         top: -70px;
         right: 0;
-        font-weight: normal;
+        font-weight: 400;
       }
       .bomb.owner {
         transform: translate(-50%, -50%);
@@ -75,7 +75,7 @@
         top: -105px;
         right: -80px;
         font-size: 300px;
-        font-weight: normal;
+        font-weight: 400;
       }
       .throw-counter {
         position: absolute;
@@ -83,7 +83,7 @@
         bottom: 70px;
         left: 70px;
         border-radius: 50%;
-        color: white;
+        color: #fff;
         width: 30px;
         height: 30px;
         transform: translate(-50%, 0);
@@ -92,11 +92,11 @@
         justify-content: center;
         align-items: center;
         opacity: 0;
-        transition: all 500ms;
+        transition: all 0.5s;
       }
       .throw-counter.owner {
         opacity: 1;
-        background: black;
+        background: #000;
       }
       #message {
         position: absolute;
